--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: OLLO
 subtitle: ''
 description: ''
 keywords:
-author: John Doe
+author: OllO
 language: en
-timezone: ''
+timezone: 'Asia/Hong_Kong'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: http://ollo.lol
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
